# SPM

./: README.md
Compensation/: .Hello.pbrt.swp  Compensation.pro  main.cpp
SLS/: App.cpp  Camera.h  Projector.h  Ray.h  Reconstructor.cpp  Reconstructor.h  ReconstructorCPU.cpp  ReconstructorCPU.h  SLS.pro  fileReader.cpp  fileReader.h
SLS/Script/: renamePhotos.sh
SLS/src/app/: App.cpp
SLS/src/lib/core/: Reconstructor.cpp  ReconstructorCPU.cpp  fileReader.cpp
SPM/: BinaryCode.h  FileUtilities.h  GrayCode.cpp  GrayCode.hpp  SPM.pro  Utilities.h  cam2_proj_processing.cpp  cam2_proj_processing.h  camera.cpp  camera.h  color_processing.cpp  color_processing.h  feature_point.cpp  feature_point.h  file_manager.cpp  file_manager.h  imaging_device.cpp  imaging_device.h  lightproccessing.cpp  lightproccessing.h  main.cpp  main.h  off_cam_calib.cpp  off_cam_calib.h  pattern.cpp  pattern.h  pattern_sequence.cpp  pattern_sequence.h  phaseshifting_pattern_decoder.cpp  phaseshifting_pattern_decoder.h  phaseshifting_pattern_encoder.cpp  phaseshifting_pattern_encoder.h  projector.cpp  projector.h  reconstructor.cpp  reconstructor.h  spm.cpp  spm.h  structures.h
SPM/Geometry/: GeometricObject.cpp  GeometricObject.h  GeometryExporter.cpp  GeometryExporter.h  GeometryProcessing.cpp  GeometryProcessing.h
SPM/Image/: CMakeLists.txt  Color.h  Image.cpp  Image.h  ImageProcessing.cpp  ImageProcessing.h
SPM/Image/bilateral_filtering/fft_3D/: support_3D.h
SPM/Image/bilateral_filtering/include/: array.h  fft_3D.h
SPM/cminpack/: alta_interface.h  cminpak.h  dpmpar.h  fdjac2.cpp  lmdif.cpp  lmdif0.cpp  lmpar.cpp  qrfac.cpp
swip/: file_manager.cpp  file_manager.h  imaging_device.cpp  imaging_device.h  main.cpp  scene.nvm  swip.pro
